--- a/src/Day/Day.scss
+++ b/src/Day/Day.scss
@@ -15,7 +15,7 @@
 .root {
   display: inline-block;
   box-sizing: border-box;
-  width: 1 / 7 * 100%;
+  width: calc(1 / 7 * 100%);
 
   list-style: none;
 
