--- a/src/Weekdays/Weekdays.scss
+++ b/src/Weekdays/Weekdays.scss
@@ -13,7 +13,7 @@
 
 .day {
   padding: 15px 0;
-  flex-basis: 1 / 7 * 100%;
+  flex-basis: calc(1 / 7 * 100%);
   flex-grow: 1;
   font-weight: 500;
   text-align: center;
